# GKR-rust

./: Cargo.toml  README.md
src/: lib.rs  sumcheck.rs
src/lib/: polynomial.rs
