[package]
name = "gkr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-poly = "0.4.2"  # Cool library for polynomial arithmetic.
ark-ff = "0.4.2" # Cool library for finite field arithmetic. 
ark-test-curves = "0.4.2"
ark-bls12-381 = "0.4.0"
rand = "0.8.5"
